--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
@@ -49,6 +49,15 @@ game8 ロール別散開位置<br>
 ・Hvy4S1_スローターシェッド_西頭割位置DPS<br>
 追加<br>
 
+<span style="color: #FF0000;">2026/1/24/13:20<br></span>
+・Hvy4S2_レプリケーション1回目_テキスト<br>
+・Hvy4S2_リンドブルム_マナスフィア_安置目安1<br>
+・Hvy4S2_リンドブルム_マナスフィア_安置目安2<br>
+・Hvy4S2_リンドブルム_マナスフィア_調整表示<br>
+・Hvy4S2_リンドブルム_ネザーワールド_変異細胞α<br>
+・Hvy4S2_リンドブルム_ネザーワールド_変異細胞β<br>
+追加<br>
+
 ## レイアウト
 ```
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_ラヴェナスリーチ_通常","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"トリガー","type":1,"refActorRequireBuff":true,"refActorBuffId":[4763],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"扇","type":4,"radius":40.0,"coneAngleMin":-60,"coneAngleMax":60,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46237],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
@@ -56,21 +65,25 @@ game8 ロール別散開位置<br>
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_大爆発1回目","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":30.0,"Match":"(14378>48829)"}],"ElementsL":[{"Name":"サークル1","type":1,"radius":12.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46239],"refActorComparisonType":6,"includeRotation":true,"onlyUnTargetable":true,"FaceMe":true,"Conditional":true,"ConditionalInvert":true},{"Name":"サークル2","type":1,"radius":12.0,"color":4278253311,"fillIntensity":0.15,"refActorDataID":2015017,"refActorObjectLife":true,"refActorLifetimeMin":14.0,"refActorLifetimeMax":99.0,"refActorComparisonType":3}]}
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_大爆発2回目","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ConditionalAnd":true,"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":60.0,"Match":"(14378>48832)"}],"ElementsL":[{"Name":"サークル1","type":1,"radius":12.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46239],"refActorComparisonType":6,"includeRotation":true,"onlyUnTargetable":true,"FaceMe":true,"Conditional":true,"ConditionalInvert":true},{"Name":"連環細胞α","type":1,"refActorRequireBuff":true,"refActorBuffId":[4753,4752],"refActorType":1,"Conditional":true,"ConditionalInvert":true,"Nodraw":true},{"Name":"サークル2","type":1,"radius":12.0,"color":4278253311,"fillIntensity":0.15,"refActorDataID":2015017,"refActorObjectLife":true,"refActorLifetimeMin":5.0,"refActorLifetimeMax":99.0,"refActorComparisonType":3}]}
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_大爆発3回目","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ConditionalAnd":true,"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":120.0,"Match":"(14378>46275)"},{"Type":2,"Duration":120.0,"Match":"(14378>46278)"}],"ElementsL":[{"Name":"サークル1","type":1,"radius":12.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46239],"refActorComparisonType":6,"includeRotation":true,"onlyUnTargetable":true,"FaceMe":true,"Conditional":true,"ConditionalInvert":true},{"Name":"サークル2","type":1,"radius":12.0,"color":4278253311,"fillIntensity":0.15,"refActorDataID":2015017,"refActorObjectLife":true,"refActorLifetimeMin":5.0,"refActorLifetimeMax":90.0,"refActorComparisonType":3}]}
-~Lv2~{"Name":"Hvy4S1_リンドブルム_細胞付着・前期","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"トリガー","type":1,"radius":6.0,"color":4278190335,"fillIntensity":0.3,"refActorRequireBuff":true,"refActorBuffId":[4761],"refActorUseBuffTime":true,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"includeRotation":true,"FaceMe":true,"Conditional":true,"Nodraw":true},{"Name":"起爆細胞","type":1,"radius":6.0,"color":4278190335,"fillIntensity":0.3,"refActorRequireBuff":true,"refActorBuffId":[4761],"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"includeRotation":true,"FaceMe":true},{"Name":"起爆細胞：重爆","type":1,"radius":6.0,"color":4280811264,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[4762],"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"includeRotation":true,"FaceMe":true},{"Name":"起爆細胞：指向_前","type":4,"refY":2.56,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4294901783,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayTextIntl":{"Jp":"前"},"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1036,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"refActorType":1,"includeRotation":true,"LineEndA":1},{"Name":"起爆細胞：指向_右","type":4,"refY":2.56,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4294901783,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayTextIntl":{"Jp":"右"},"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1037,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"refActorType":1,"includeRotation":true,"LineEndA":1,"AdditionalRotation":1.5707964},{"Name":"起爆細胞：指向_後","type":4,"refY":2.56,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4294901783,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayTextIntl":{"Jp":"後"},"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1038,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"refActorType":1,"includeRotation":true,"LineEndA":1,"AdditionalRotation":3.1415927},{"Name":"起爆細胞：指向_右","type":4,"refY":2.56,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4294901783,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayTextIntl":{"Jp":"左"},"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1039,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"refActorType":1,"includeRotation":true,"LineEndA":1,"AdditionalRotation":4.712389}]}
+~Lv2~{"Name":"Hvy4S1_リンドブルム_細胞付着・前期","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"トリガー","type":1,"radius":6.0,"color":4278190335,"fillIntensity":0.3,"refActorRequireBuff":true,"refActorBuffId":[4761],"refActorUseBuffTime":true,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"includeRotation":true,"FaceMe":true,"Conditional":true,"Nodraw":true},{"Name":"起爆細胞","type":1,"radius":6.0,"color":4278190335,"fillIntensity":0.3,"refActorRequireBuff":true,"refActorBuffId":[4761],"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"includeRotation":true,"FaceMe":true},{"Name":"起爆細胞：重爆","type":1,"radius":6.0,"color":4280811264,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[4762],"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"includeRotation":true,"FaceMe":true},{"Name":"起爆細胞：指向_前","type":4,"refY":2.56,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4294901783,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayTextIntl":{"Jp":"前"},"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1036,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"refActorType":1,"includeRotation":true,"LineEndA":1},{"Name":"起爆細胞：指向_右","type":4,"refY":2.56,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4294901783,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayTextIntl":{"Jp":"右"},"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1037,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"refActorType":1,"includeRotation":true,"LineEndA":1,"AdditionalRotation":1.5707964},{"Name":"起爆細胞：指向_後","type":4,"refY":2.56,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4294901783,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayTextIntl":{"Jp":"後"},"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1038,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"refActorType":1,"includeRotation":true,"LineEndA":1,"AdditionalRotation":3.1415927},{"Name":"起爆細胞：指向_左","type":4,"refY":2.56,"radius":30.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4294901783,"fillIntensity":0.3,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayTextIntl":{"Jp":"左"},"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1039,"refActorBuffTimeMax":5.0,"refActorComparisonType":1,"refActorType":1,"includeRotation":true,"LineEndA":1,"AdditionalRotation":4.712389}]}
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_細胞付着・中期","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"DCond":5,"UseTriggers":true,"Triggers":[{"Type":2,"Duration":50.0,"Match":"(14378>48830)"}],"ElementsL":[{"Name":"連環細胞α","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4278190335,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayText":"α   ","refActorRequireBuff":true,"refActorBuffId":[4752],"refActorComparisonType":1,"refActorType":1},{"Name":"連環細胞β","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4278255611,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayText":"β   ","refActorRequireBuff":true,"refActorBuffId":[4754],"refActorComparisonType":1,"refActorType":1},{"Name":"ファーストターゲット","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":0,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayText":"   1","refActorRequireBuff":true,"refActorBuffId":[3004],"refActorComparisonType":1,"refActorType":1},{"Name":"セカンドターゲット","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":0,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayText":"   2","refActorRequireBuff":true,"refActorBuffId":[3005],"refActorComparisonType":1,"refActorType":1},{"Name":"サードターゲット","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":0,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayText":"   3","refActorRequireBuff":true,"refActorBuffId":[3006],"refActorComparisonType":1,"refActorType":1},{"Name":"フォースターゲット","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":0,"overlayTextColor":4294967295,"overlayVOffset":3.0,"overlayFScale":3.0,"thicc":0.0,"overlayText":"   4","refActorRequireBuff":true,"refActorBuffId":[3451],"refActorComparisonType":1,"refActorType":1}]}
 ~Lv2~{"Enabled":false,"Name":"Hvy4S1_リンドブルム_細胞付着・後期","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"分散細胞_北_黒縁","type":1,"offY":-20.0,"radius":3.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1078,"refActorComparisonType":1,"refActorType":1,"tether":true,"FaceMe":true},{"Name":"分散細胞_北","type":1,"offY":-20.0,"radius":3.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1078,"refActorComparisonType":1,"refActorType":1,"tether":true,"FaceMe":true},{"Name":"分散細胞_東_黒縁","type":1,"offX":30.0,"radius":3.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1079,"refActorComparisonType":1,"refActorType":1,"tether":true,"FaceMe":true},{"Name":"分散細胞_東","type":1,"offX":30.0,"radius":3.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1079,"refActorComparisonType":1,"refActorType":1,"tether":true,"FaceMe":true},{"Name":"分散細胞_南_黒縁","type":1,"offY":20.0,"radius":3.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1080,"refActorComparisonType":1,"refActorType":1,"tether":true,"FaceMe":true},{"Name":"分散細胞_南","type":1,"offY":20.0,"radius":3.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1080,"refActorComparisonType":1,"refActorType":1,"tether":true,"FaceMe":true},{"Name":"分散細胞_西_黒縁","type":1,"offX":-30.0,"radius":3.0,"color":4278190080,"Filled":false,"fillIntensity":0.3,"thicc":10.0,"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1081,"refActorComparisonType":1,"refActorType":1,"tether":true,"FaceMe":true},{"Name":"分散細胞_西","type":1,"offX":-30.0,"radius":3.0,"color":4294967295,"Filled":false,"fillIntensity":0.3,"thicc":5.0,"refActorRequireBuff":true,"refActorBuffId":[3558],"refActorUseBuffParam":true,"refActorBuffParam":1081,"refActorComparisonType":1,"refActorType":1,"tether":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_グランドエントランス","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"サークル","type":1,"radius":2.01,"color":4278190335,"fillIntensity":0.7,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46202,46203,46240,46241,46242,46243],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_フェラルフィッション_十字足場","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"Freezing":true,"FreezeFor":7.0,"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46241],"refActorUseCastTime":true,"refActorCastTimeMax":1.0,"refActorComparisonType":6,"LimitDistance":true,"DistanceSourceX":82.5,"DistanceSourceY":87.5,"DistanceSourceZ":1.9073486E-06,"DistanceMax":1.0,"Conditional":true,"Nodraw":true},{"Name":"北西","type":2,"refX":80.0,"refY":90.0,"refZ":-1.9073486E-06,"offX":95.0,"offY":90.0,"offZ":5.722046E-06,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":541,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"北東","type":2,"refX":105.0,"refY":90.0,"refZ":-1.9073486E-06,"offX":120.0,"offY":90.0,"offZ":5.722046E-06,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":541,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"中央","type":2,"refX":90.0,"refY":100.0,"refZ":1.9073486E-06,"offX":110.0,"offY":100.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":541,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"南西","type":2,"refX":80.0,"refY":110.0,"refZ":1.9073486E-06,"offX":95.0,"offY":110.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":541,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"南東","type":2,"refX":105.0,"refY":110.0,"refZ":1.9073486E-06,"offX":120.0,"offY":110.0,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":541,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_フェラルフィッション_X字足場","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"Freezing":true,"FreezeFor":7.0,"ElementsL":[{"Name":"トリガー","type":1,"refActorNPCNameID":14378,"refActorRequireCast":true,"refActorCastId":[46240],"refActorCastTimeMax":1.0,"refActorComparisonType":6,"LimitDistance":true,"DistanceSourceX":92.5,"DistanceSourceY":87.5,"DistanceSourceZ":1.9073486E-06,"DistanceMax":1.0,"Conditional":true,"Nodraw":true},{"Name":"北","type":2,"refX":90.0,"refY":90.0,"refZ":-1.9073486E-06,"offX":110.0,"offY":90.0,"offZ":5.722046E-06,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":541,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"中央","type":2,"refX":80.0,"refY":100.0,"refZ":-1.9073486E-06,"offX":120.0,"offY":100.0,"offZ":5.722046E-06,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":541,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0},{"Name":"南","type":2,"refX":90.0,"refY":110.0,"refZ":-1.9073486E-06,"offX":110.0,"offY":110.0,"offZ":5.722046E-06,"radius":5.0,"color":4278190080,"fillIntensity":0.5,"refActorNPCNameID":541,"refActorComparisonType":6,"includeRotation":true,"FillStep":2.0}]}
 ~Lv2~{"Name":"Hvy4S1_リンドブルム_ドロップスカージ","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"DCond":5,"UseTriggers":true,"MinDistance":2.0,"MaxDistance":100.0,"UseDistanceLimit":true,"DistanceLimitType":1,"Triggers":[{"Type":2,"Duration":5.0,"Match":"(14378>46257)","MatchDelay":10.0}],"ElementsL":[{"Name":"サークル","type":1,"radius":5.0,"color":4278190335,"fillIntensity":0.3,"refActorComparisonType":1,"includeRotation":true,"FaceMe":true}]}
+~Lv2~{"Name":"Hvy4S2_レプリケーション1回目_テキスト","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ConditionalAnd":true,"ElementsL":[{"Name":"","type":1,"radius":2.5,"Donut":0.5,"color":3355508223,"fillIntensity":0.5,"overlayTextColor":3355506687,"overlayVOffset":2.0,"thicc":4.0,"overlayText":"Stack","refActorName":"*","refActorRequireBuff":true,"refActorBuffId":[3323],"Conditional":true,"Nodraw":true},{"Name":"fire down","type":1,"radius":0.0,"color":3355487743,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294901931,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"闇を受ける","refActorRequireBuff":true,"refActorBuffId":[3323],"refActorRequireBuffsInvert":true,"refActorType":1},{"Name":"dark down","type":1,"radius":0.0,"Donut":0.2,"color":3358850816,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4278190335,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayText":"火を受ける","refActorRequireBuff":true,"refActorBuffId":[3323],"refActorType":1},{"Name":"","type":1,"refActorNPCNameID":14380,"refActorRequireCast":true,"refActorCastId":[46303,46303,46304,46347,46349,46350,47576,46303,46304,46347,46349,46350,47576],"refActorComparisonType":6,"Conditional":true,"Nodraw":true},{"Name":"dark down","type":1,"radius":4.5,"Donut":0.5,"color":3358850816,"fillIntensity":0.5,"overlayTextColor":3355508484,"overlayVOffset":2.0,"thicc":4.0,"overlayText":"Stack","refActorRequireBuff":true,"refActorBuffId":[3323],"refActorType":1},{"Name":"fire down","type":1,"radius":5.0,"color":3355487743,"Filled":false,"fillIntensity":0.5,"overlayTextColor":3355506687,"overlayVOffset":2.0,"thicc":4.0,"overlayText":"Spread","refActorRequireBuff":true,"refActorBuffId":[3323],"refActorRequireBuffsInvert":true,"refActorType":1}]}
 ~Lv2~{"Name":"Hvy4S2_リンドブルム_スネークキック","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"扇","type":4,"radius":30.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46375],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
 ~Lv2~{"Name":"Hvy4S2_リンドブルム_ダブルソバット1","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"vfx","type":1,"radius":10.0,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorComparisonType":7,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"refActorVFXPath":"vfx/lockon/eff/sharelaser2tank5sec_c0k1.avfx","refActorVFXMax":5000,"faceplayer":"<tethered>","FillStep":4.0,"IsCapturing":true,"Nodraw":true},{"Name":"扇","type":4,"radius":30.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46368],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyTargetable":true,"FaceMe":true,"DistanceMax":13.2,"faceplayer":"<element:vfx>","FillStep":4.0}]}
 ~Lv2~{"Name":"Hvy4S2_リンドブルム_ダブルソバット2","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"扇","type":4,"radius":30.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46373],"refActorUseCastTime":true,"refActorCastTimeMax":5.0,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"faceplayer":"<element:vfx>","FillStep":4.0}]}
 ~Lv2~{"Name":"Hvy4S2_リンドブルム_ダブルソバット3","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"トリガー","type":4,"radius":30.0,"coneAngleMin":-90,"coneAngleMax":90,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46373],"refActorUseCastTime":true,"refActorCastTimeMin":4.0,"refActorCastTimeMax":7.0,"refActorUseOvercast":true,"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"faceplayer":"<element:vfx>","FillStep":4.0,"Conditional":true,"Nodraw":true},{"Name":"サークル","type":1,"radius":10.0,"color":4278190335,"fillIntensity":0.3,"refActorPlaceholder":["<t1>","<t2>"],"refActorComparisonType":5,"includeRotation":true,"FaceMe":true}]}
+~Lv2~{"Name":"Hvy4S2_リンドブルム_マナスフィア_安置目安1","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"DCond":5,"UseTriggers":true,"Freezing":true,"FreezeFor":23.0,"Triggers":[{"Type":2,"Duration":1.0,"Match":"ActionEffect|46333","MatchDelay":1.0}],"ElementsL":[{"Name":"AOE close 1","type":1,"refActorDataID":19206,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Cone N - W","type":5,"refX":90.0,"refY":100.0,"radius":5.0,"coneAngleMin":150,"coneAngleMax":210,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Cone S - W","type":5,"refX":90.0,"refY":100.0,"radius":5.0,"coneAngleMin":-390,"coneAngleMax":-330,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Donut close 1","type":1,"refActorDataID":19207,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Cone N - E","type":5,"refX":110.0,"refY":100.0,"radius":5.0,"coneAngleMin":150,"coneAngleMax":210,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Cone S - E","type":5,"refX":110.0,"refY":100.0,"radius":5.0,"coneAngleMin":-390,"coneAngleMax":-330,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"","Enabled":false},{"Name":"AOE close 1","type":1,"refActorDataID":19206,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Cone N - E","type":5,"refX":110.0,"refY":100.0,"radius":5.0,"coneAngleMin":150,"coneAngleMax":210,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Cone S - E","type":5,"refX":110.0,"refY":100.0,"radius":5.0,"coneAngleMin":-390,"coneAngleMax":-330,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Donut close 1","type":1,"refActorDataID":19207,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Cone N - W","type":5,"refX":90.0,"refY":100.0,"radius":5.0,"coneAngleMin":150,"coneAngleMax":210,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Cone S - W","type":5,"refX":90.0,"refY":100.0,"radius":5.0,"coneAngleMin":-390,"coneAngleMax":-330,"color":3355508540,"fillIntensity":0.5,"includeRotation":true}]}
+~Lv2~{"Name":"Hvy4S2_リンドブルム_マナスフィア_安置目安2","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"DCond":5,"UseTriggers":true,"Freezing":true,"FreezeFor":30.0,"FreezeDisplayDelay":22.0,"Triggers":[{"Type":2,"Duration":1.0,"Match":"ActionEffect|46333","MatchDelay":1.0}],"ElementsL":[{"Name":"AOE close 1","type":1,"refActorDataID":19206,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Cone N - E","type":5,"refX":110.0,"refY":100.0,"radius":5.0,"coneAngleMin":150,"coneAngleMax":210,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Cone S - E","type":5,"refX":110.0,"refY":100.0,"radius":5.0,"coneAngleMin":-390,"coneAngleMax":-330,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Donut close 1","type":1,"refActorDataID":19207,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Cone N - W","type":5,"refX":90.0,"refY":100.0,"radius":5.0,"coneAngleMin":150,"coneAngleMax":210,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Cone S - W","type":5,"refX":90.0,"refY":100.0,"radius":5.0,"coneAngleMin":-390,"coneAngleMax":-330,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"","Enabled":false},{"Name":"AOE close 1","type":1,"refActorDataID":19206,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Cone N - W","type":5,"refX":90.0,"refY":100.0,"radius":5.0,"coneAngleMin":150,"coneAngleMax":210,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Cone S - W","type":5,"refX":90.0,"refY":100.0,"radius":5.0,"coneAngleMin":-390,"coneAngleMax":-330,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Donut close 1","type":1,"refActorDataID":19207,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Cone N - E","type":5,"refX":110.0,"refY":100.0,"radius":5.0,"coneAngleMin":150,"coneAngleMax":210,"color":3355508540,"fillIntensity":0.5,"includeRotation":true},{"Name":"Cone S - E","type":5,"refX":110.0,"refY":100.0,"radius":5.0,"coneAngleMin":-390,"coneAngleMax":-330,"color":3355508540,"fillIntensity":0.5,"includeRotation":true}]}
+~Lv2~{"Name":"Hvy4S2_リンドブルム_マナスフィア_調整表示","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"DCond":5,"UseTriggers":true,"Freezing":true,"FreezeFor":10.0,"Triggers":[{"Type":2,"Duration":1.0,"Match":"ActionEffect|46333","MatchDelay":1.0}],"ElementsL":[{"Name":"AOE close 1","type":1,"refActorDataID":19206,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"AOE far 1","type":1,"offY":3.0,"radius":4.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayText":"当たる","refActorDataID":19206,"refActorComparisonType":3,"includeRotation":true,"onlyVisible":true,"tether":true,"LimitDistance":true,"LimitDistanceInvert":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"RotationOverride":true,"RotationOverridePoint":{"X":90.0,"Y":100.0}},{"Name":"Donut close 1","type":1,"refActorDataID":19207,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Donut far 1","type":1,"offY":3.0,"radius":4.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayText":"当たる","refActorDataID":19207,"refActorComparisonType":3,"includeRotation":true,"onlyVisible":true,"tether":true,"LimitDistance":true,"LimitDistanceInvert":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"RotationOverride":true,"RotationOverridePoint":{"X":90.0,"Y":100.0}},{"Name":"Blue fan close 1","type":1,"refActorDataID":19208,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Blue fan far 1","type":1,"offY":3.0,"radius":4.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayText":"当たる","refActorDataID":19208,"refActorComparisonType":3,"includeRotation":true,"onlyVisible":true,"tether":true,"LimitDistance":true,"LimitDistanceInvert":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"RotationOverride":true,"RotationOverridePoint":{"X":90.0,"Y":100.0}},{"Name":"red fan close 1","type":1,"refActorDataID":19209,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"red fan far 1","type":1,"offY":3.0,"radius":4.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayText":"当たる","refActorDataID":19209,"refActorComparisonType":3,"includeRotation":true,"onlyVisible":true,"tether":true,"LimitDistance":true,"LimitDistanceInvert":true,"DistanceSourceX":110.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"RotationOverride":true,"RotationOverridePoint":{"X":90.0,"Y":100.0}},{"Name":"AOE close 1","type":1,"refActorDataID":19206,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"AOE far 1","type":1,"offY":3.0,"radius":4.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayText":"当たる","refActorDataID":19206,"refActorComparisonType":3,"includeRotation":true,"onlyVisible":true,"tether":true,"LimitDistance":true,"LimitDistanceInvert":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"RotationOverride":true,"RotationOverridePoint":{"X":110.0,"Y":100.0}},{"Name":"Donut close 1","type":1,"refActorDataID":19207,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Donut far 1","type":1,"offY":3.0,"radius":4.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayText":"当たる","refActorDataID":19207,"refActorComparisonType":3,"includeRotation":true,"onlyVisible":true,"tether":true,"LimitDistance":true,"LimitDistanceInvert":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"RotationOverride":true,"RotationOverridePoint":{"X":110.0,"Y":100.0}},{"Name":"Blue fan close 1","type":1,"refActorDataID":19208,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"Blue fan far 1","type":1,"offY":3.0,"radius":4.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayText":"当たる","refActorDataID":19208,"refActorComparisonType":3,"includeRotation":true,"onlyVisible":true,"tether":true,"LimitDistance":true,"LimitDistanceInvert":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"RotationOverride":true,"RotationOverridePoint":{"X":110.0,"Y":100.0}},{"Name":"red fan close 1","type":1,"refActorDataID":19209,"refActorComparisonType":3,"onlyVisible":true,"LimitDistance":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"Conditional":true,"ConditionalReset":true,"Nodraw":true},{"Name":"red fan far 1","type":1,"offY":3.0,"radius":4.0,"Filled":false,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294967295,"overlayVOffset":2.0,"overlayFScale":2.0,"overlayText":"当たる","refActorDataID":19209,"refActorComparisonType":3,"includeRotation":true,"onlyVisible":true,"tether":true,"LimitDistance":true,"LimitDistanceInvert":true,"DistanceSourceX":90.0,"DistanceSourceY":100.0,"DistanceMax":10.0,"RotationOverride":true,"RotationOverridePoint":{"X":110.0,"Y":100.0}}]}
+~Lv2~{"Name":"Hvy4S2_リンドブルム_ネザーワールド_変異細胞α","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"トリガー","type":1,"refActorRequireBuff":true,"refActorBuffId":[4769],"refActorComparisonType":1,"refActorType":1,"Conditional":true,"Nodraw":true},{"Name":"ネザーワールド・ニア","type":1,"radius":7.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46379],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true},{"Name":"ネザーワールド・ファー","type":1,"radius":1.5,"Donut":30.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46380],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
+~Lv2~{"Name":"Hvy4S2_リンドブルム_ネザーワールド_変異細胞β","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"トリガー","type":1,"refActorRequireBuff":true,"refActorBuffId":[4771],"refActorComparisonType":1,"refActorType":1,"Conditional":true,"Nodraw":true},{"Name":"ネザーワールド・ニア","type":1,"radius":1.5,"Donut":30.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46379],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true},{"Name":"ネザーワールド・ファー","type":1,"radius":7.5,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46380],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy4S2_リンドブルム_リンドブルム・ストンガ","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"サークル","type":1,"radius":4.0,"color":4278190335,"fillIntensity":0.3,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46327],"refActorComparisonType":6,"includeRotation":true,"FaceMe":true}]}
 ~Lv2~{"Name":"Hvy4S2_人型分体_ウィングドスカージ","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"扇","type":4,"radius":40.0,"coneAngleMin":-15,"coneAngleMax":15,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14379,"refActorRequireCast":true,"refActorCastId":[46300],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"DistanceMax":13.2,"FillStep":4.0}]}
-~Lv2~{"Name":"Hvy4S2_人型分体_トップティアスラム","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4278190335,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayTextIntl":{"Jp":"トップティアスラム"},"refActorNPCNameID":14380,"refActorRequireCast":true,"refActorCastId":[46301],"refActorComparisonType":6}]}
-~Lv2~{"Name":"Hvy4S2_人型分体_マイティマジック","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"テキスト","type":1,"radius":0.0,"fillIntensity":0.5,"overlayBGColor":4278190080,"overlayTextColor":4294902272,"overlayVOffset":2.0,"overlayFScale":2.0,"thicc":0.0,"overlayTextIntl":{"Jp":"マイティマジック"},"refActorNPCNameID":14380,"refActorRequireCast":true,"refActorCastId":[46303],"refActorComparisonType":6}]}
 ~Lv2~{"Name":"Hvy4S2_人型分体_パワーガッシャー","Group":"[7.4]アルカディアヘビー級4層零式","ZoneLockH":[1327],"ElementsL":[{"Name":"扇1","type":4,"radius":30.0,"coneAngleMin":-45,"coneAngleMax":45,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14380,"refActorRequireCast":true,"refActorCastId":[46363],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"DistanceMax":13.2,"FillStep":4.0},{"Name":"扇2","type":4,"radius":30.0,"coneAngleMin":-45,"coneAngleMax":45,"color":4278190335,"fillIntensity":0.3,"thicc":3.0,"refActorNPCNameID":14380,"refActorRequireCast":true,"refActorCastId":[46363],"refActorComparisonType":6,"includeHitbox":true,"includeRotation":true,"onlyVisible":true,"AdditionalRotation":3.1415927,"DistanceMax":13.2,"FillStep":4.0}]}
 ```
 
