--- a/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
+++ b/Splatoon/[7.x]黄金のレガシー/零式/[7.4]アルカディアヘビー級4層零式.md
@@ -135,7 +135,7 @@ https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties
 野良での処理法が平定したらConfigurationsを出します。<br>
 splatoon githubにJP kanatan(イディル)とJp Nukemaru(ぬけまる)の設定ファイルがありますが、それらを導入後に別途設定が必要なので注意してください。<br>
 ~~2026/1/25時点ではぬけまる処理は一部表示が違いますのでご注意ください。~~<br>
-ぬけまるで平定したのでConfigurations対応しました<br>
+ぬけまるで平定したのでConfigurations対応しました(スクリプトv17にて動作確認済み)<br>
 ```
 https://github.com/PunishXIV/Splatoon/raw/refs/heads/main/SplatoonScripts/Duties/Dawntrail/M12S%20P2%20Idyllic%20Dream%20Tired.cs
 ```
